[project]
name = "langgraph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.138.0",
    "grandalf>=0.8",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "numpy>=2.2.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
